infra/k8s/eks/networkpolicies/frontend-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend-allow-external
  namespace: bonsai
spec:
  podSelector:
    matchLabels:
      app: bonsai-frontend
      tier: frontend
  policyTypes:
  - Ingress
  ingress:
  - from:
    - ipBlock:
        cidr: 0.0.0.0/0
  - ports:
    - protocol: TCP
      port: 80
